public/css/main.css
/* Structural */
.container {
  width: 100%;
  max-width: 43.75rem;
}

.center {
  margin: 0 auto;
}

.header {
  border: 1px solid var(--blue);
}

.header h1 {
  font-family: 'Cherry Bomb One', sans-serif;
  font-size: 3rem;
  font-display: fallback;
  font-weight: 400;
}

.main {
  border: 1px solid var(--border);
  background-color: var(--bg);
  padding: 1rem 1.5rem;
  border-radius: 1rem;
}

.footer {
  text-align: left;
  display: flex;
  justify-content: flex-start;
  gap: 15px;
}

.callout {
  background-color: var(--callout);
  padding: 0.5rem 1rem;
  margin: 0 0 0.5rem 0;
  border-radius: 6px;
}

.twocol {
  column-count: 2;
}

/* Helpers */

h1.inline,
h2.inline,
h3.inline,
h4.inline,
h5.inline,
h6.inline {
  font-size: inherit;
  display: inline;
}

ul.inline,
ol.inline {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  list-style-type: none;
  row-gap: 10px;
  column-gap: 15px;
  padding-left: 0;
  margin: 0;
}

ul.unstyled,
ol.unstyled {
  list-style-type: none;
  padding-left: 0;
}

.pb-1 {
  padding-bottom: 1rem !important;
}

.pt-1 {
  padding-top: 1rem !important;
}

.py-1 {
  padding-top: 1rem !important;
  padding-bottom: 1rem !important;
}

.pb-2 {
  padding-bottom: 2rem !important;
}

.pt-2 {
  padding-top: 2rem !important;
}

.py-2 {
  padding-top: 2rem !important;
  padding-bottom: 2rem !important;
}

.mb-1 {
  margin-bottom: 1rem !important;
}

.mt-1 {
  margin-top: 1rem !important;
}

.my-1 {
  margin-top: 1rem !important;
  margin-bottom: 1rem !important;
}

.mb-2 {
  margin-bottom: 2rem !important;
}

.mt-2 {
  margin-top: 2rem !important;
}

.my-2 {
  margin-top: 2rem !important;
  margin-bottom: 2rem !important;
}

.sronly {
  display: inline-block;
  width: 0;
  height: 0;
  overflow: hidden;
  opacity: 0;
  position: absolute;
}

.emoji {
  font-size: 110%;
  line-height: 90%;
}

.lowercase {
  text-transform: lowercase;
}

.italic {
  font-style: italic;
}

.flip-y {
  transform: scaleX(-1);
}

.d-ib {
  display: inline-block;
}

/* Webrings */

.webring__prev,
.webring__next,
.webring-prev,
.webring-next {
  font-size: 0 !important;
  width: 30px;
  display: inline-block;
  text-align: center;
}

.webring__prev::before,
.webring__next::before,
.webring-prev a::before,
.webring-next a::before {
  content: '➪';
  font-size: 1rem;
  display: inline-block;
}

.webring__prev::before,
.webring-prev a::before {
  transform: scaleX(-1);
  display: inline-block;
}

/* Post pagination */

.links-nextprev {
  padding-top: 2rem;
  margin-top: 2rem;
  border-top: 1px solid var(--pink);
  display: grid;
  grid-template-columns: 1fr 1fr;
  text-align: center;
}

.links-prev,
.links-next {
  padding-top: 5rem;
  position: relative;
}

.links-prev a::before,
.links-next a::before {
  content: '➪';
  font-size: 4rem;
  line-height: 1;
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  text-align: center;
}

.links-prev a::before {
  transform: scaleX(-1);
}


/* Third Party */

#statuscafe #statuscafe-username a {
  font-weight: bold;
  text-decoration: none;
}

#neossg table {
  border-collapse: collapse;
}

